--- a/src/Dashboard/insights/InsightsPage.css
+++ b/src/Dashboard/insights/InsightsPage.css
@@ -1,18 +1,22 @@
-.container {
+  .container {
     flex-direction: column;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1500px;
+    max-width: 1400px;
   }
   
-
-.headings{
+  .headings {
     font-size: 28px;
-    font-weight: bold;
-    color:'black'
-}
-.textView{
-    font-size: 24px;
-    color:'black'
-}
+    font-weight: 700 !important;
+    color: black;
+    padding-top: 10px;
+  }
+  
+  .textView {
+    font-size: 22px !important;
+    color: black;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  
