--- a/src/Dashboard/profile/ProfilePage.css
+++ b/src/Dashboard/profile/ProfilePage.css
@@ -1,18 +1,27 @@
-.container {
+.profile-form {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1500px;
+    margin-top: 30px !important;
   }
   
-
-.headings{
-    font-size: 28px;
-    font-weight: bold;
-    color:'black'
-}
-.textView{
-    font-size: 24px;
-    color:'black'
-}
+  .custom-textfield .MuiOutlinedInput-notchedOutline {
+    border-color: #c25700 !important;
+  }
+  .custom-textfield .MuiInputLabel-root.Mui-focused {
+    color: #c25700 !important;
+  }
+  
+  .custom-save-button {
+    background-color: #c25700 !important;
+    color: white !important;
+    border-color: #c25700 !important;
+    height: 55px !important;
+    width: 150px !important;
+    margin-top: 30px !important;
+  }
+  
+  .custom-save-button:hover {
+    background-color: #c25700  !important;
+  }
+  
