--- a/src/Dashboard/insights/InsightsPage.css
+++ b/src/Dashboard/insights/InsightsPage.css
@@ -9,7 +9,7 @@
   .headings {
     font-size: 28px;
     font-weight: 700 !important;
-    color: black;
+    color: #c25700 !important;
     padding-top: 10px;
   }
   
