--- a/src/Dashboard/reusablecards/HomeReusableCard.css
+++ b/src/Dashboard/reusablecards/HomeReusableCard.css
@@ -8,7 +8,7 @@
   
   .custom-card-media {
     height: 236px;
-    width: 236px;
+    width: 240px !important;
     padding: 10px;
     border-radius: 6%;
   }
@@ -21,7 +21,7 @@
   
   .custom-card-title {
     text-align: left;
-    font-weight: bold;
+    font-weight: bold !important;
     color: #c25700;
   }
   
