--- a/src/Dashboard/Footer/FooterPage.css
+++ b/src/Dashboard/Footer/FooterPage.css
@@ -5,7 +5,10 @@
     width: 100%;
     background-color: #c25700;
     color: white;
-    text-align: center;
+    justify-content: center; 
+    align-items: center;
+    /* height : 90; */
+    text-align: center !important;
     padding: 30px 0;
   }
   .content {
