--- a/src/Dashboard/Home/HomePage.css
+++ b/src/Dashboard/Home/HomePage.css
@@ -7,6 +7,8 @@
   }
 
   .quote {
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
     width: 70%; 
     margin: 0 auto;
   }
@@ -42,7 +44,7 @@
   
   .card-title {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 18px;
     margin-bottom: 10px;
   }
   
