--- a/src/Dashboard/aboutus/AboutUsPage.css
+++ b/src/Dashboard/aboutus/AboutUsPage.css
@@ -1,20 +1,23 @@
-  .container {
+  .containeraboutus {
     flex-direction: column;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
     max-width: 1400px !important;
   }
   
-  .headings {
-    font-size: 28px !important;
+  .headingsaboutus {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 25px !important;
     font-weight: 700 !important;
-    color: black;
+    color: #c25700 !important;
     padding-top: 10px;
   }
   
-  .textView {
-    font-size: 22px !important;
+  .textViewaboutus {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 18px !important;
     color: black;
     padding-top: 16px;
     padding-bottom: 16px;
